tests/core/snapshots/default-value-config.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
snapshot_kind: text
---
schema @server @upstream {
  query: Query
}

input Input {
  id: Int = 1
}

type Query {
  bar(input: Input = {id: 3}): Int @http(url: "http://abc.com/foo/{{.args.input.id}}")
  foo(input: Input!): Int @http(url: "http://abc.com/foo/{{.args.input.id}}")
}
