tests/core/snapshots/default-value-input-type.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream {
  query: Query
}

input Input {
  value: Int
}

type Query {
  abc(input: Input!): Int @expr(body: "{{.args.input}}")
}
