tests/core/snapshots/different-batch-key-and-extraction-path.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
  @server(port: 8000)
  @upstream(baseURL: "http://jsonplaceholder.typicode.com", batch: {delay: 1, headers: [], maxSize: 1000}) {
  query: Query
}

type BankAccount {
  bic: String
  iban: String
  id: ID
}

type Foo {
  transactions: [Transaction]
}

type Query {
  foo: Foo @http(path: "/transactions")
}

type Transaction {
  BankAccounts: [BankAccount]
    @http(
      batch: {batchKey: "bank_account_ids[]", extractionPath: ["bank_accounts", "id"]}
      path: "/v1/bank_accounts"
      query: [{key: "bank_account_ids[]", value: "{{.value.bank_account_id}}"}]
    )
  bank_account_id: String
  id: ID
  slug: String
}
