tests/core/snapshots/enum-args.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
scalar Bytes

enum COLOR {
  BLUE
  GREEN
  RED
}

scalar Date

scalar DateTime

scalar Email

scalar Empty

scalar Int128

scalar Int16

scalar Int32

scalar Int64

scalar Int8

scalar JSON

scalar PhoneNumber

type Query {
  color(item: COLOR): COLOR
}

scalar UInt128

scalar UInt16

scalar UInt32

scalar UInt64

scalar UInt8

scalar Url

schema {
  query: Query
}
