tests/core/snapshots/env-value.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Post {
  body: String
  id: Int
  title: String
  userId: Int!
}

type Query {
  post1: Post
  post2: Post
  post3: Post
}

schema {
  query: Query
}
